--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body class="container">
     <div class="title">
-      <p>statics of Covid-19</p>
+      <p>Statics of Covid-19</p>
     </div>
     <table class="table table-striped">
       <thead class="thead-dark">
