--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,14 @@
 body {
   padding-top: 50px;
+
+  background-color: black;
   background-image: url("./covid-1.png");
+  background-repeat: no-repeat;
 }
 .title {
-  height: 150px;
   text-align: center;
 }
 .title > p {
-  margin-top: 10px;
   font-size: 70px;
   color: aliceblue;
 }
@@ -24,4 +25,19 @@ body {
 .table-striped > tbody > tr:nth-child(even) > td,
 .table-striped > tbody > tr:nth-child(even) > th {
   background-color: #2f453c;
+}
+
+@media only screen and (max-width: 770px) {
+  .title > p {
+    font-size: 50px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .title > p {
+    font-size: 30px;
+  }
+  .title {
+    background-color: #2f453c;
+  }
 }
